# agentify-alfworld

./: .env.example  .gitignore  README.md  WHITE_AGENT_SETUP.md  main.py  pyproject.toml  run.sh  start_white_agent.sh
configs/: base_config.yaml
src/: __init__.py  launcher.py
src/green_agent/: __init__.py  agent.py  alfworld_green_agent.toml
src/metrics/: __init__.py  behavior_metrics.py  run_logger.py
src/my_util/: __init__.py  my_a2a.py
src/scripts/: patch_textworld.py
src/white_agent/: __init__.py  agent.py  alternating_agent.py  repetitive_agent.py
